--- a/JuegoCartas/package.json
+++ b/JuegoCartas/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint --fix . --ext .js,jsx"
   },
   "dependencies": {
+    "@sweetalert2/themes": "^5.0.15",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
